--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <center>
         <br>
-        <h2> Click image to be redirected to the EC2 instance that you created - revole </h2>
+        <h2> Click image to be redirected to the EC2 instance that you created - dongjin </h2>
         </center>
     </body>
 </html>git
